[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/main/main_game.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/systems/camera_controller.gd" id="2_camera"]
[ext_resource type="Script" path="res://scripts/systems/enemy_spawner.gd" id="3_spawner"]
[ext_resource type="PackedScene" path="res://scenes/ui/game_ui.tscn" id="4_game_ui"]
[ext_resource type="PackedScene" path="res://scenes/ui/game_over_ui.tscn" id="5_game_over"]
[ext_resource type="PackedScene" path="res://scenes/ui/pause_menu.tscn" id="6_pause"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
z_index = -100
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
color = Color(0.05, 0.02, 0.1, 1)

[node name="World" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.2, 1.2)
script = ExtResource("2_camera")

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("3_spawner")

[node name="GameUI" parent="." instance=ExtResource("4_game_ui")]

[node name="GameOverUI" parent="." instance=ExtResource("5_game_over")]

[node name="PauseMenu" parent="." instance=ExtResource("6_pause")]
